samples/bookmap/valid/R28.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <booktitle><booklibrary>L</booklibrary><mainbooktitle>T</mainbooktitle></booktitle>
  <bookmeta/>
  <frontmatter/>
  <chapter href="c.dita"><topicmeta><navtitle>C</navtitle></topicmeta></chapter>
  <reltable>
    <relrow><relcell><topicref href="t1.dita"/></relcell></relrow>
  </reltable>
</bookmap>