samples/bookmap/invalid/R28.dita
<?xml version="1.0" encoding="UTF-8"?>
<bookmap>
  <reltable/> {/* reltable before booktitle */}
  <booktitle><booklibrary>L</booklibrary><mainbooktitle>T</mainbooktitle></booktitle>
  <bookmeta/>
  <frontmatter/>
  <chapter href="c.dita"><topicmeta><navtitle>C</navtitle></topicmeta></chapter>
</bookmap>